Pasando Test TypeError

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
     <button type="button" id="Cifrar" class="boton">Cifrar</button>
     <button type="button" id="Descifrar" class="boton">Descifrar</button><br><br>
     
-    <p id="outputclave" type="text" placeholder="Resultado" name="outputclave">- R E S U L T A D O -</p></p><br><br>
+    <p id="outputclave" type="text" placeholder="Resultado" name="outputclave">- R E S U L T A D O -</p><br><br>
 
     
     <script src="index.js" type="module"></script>
